BUG FIX: toast not showing

--- a/src/components/styles/DeleteItemModal.css
+++ b/src/components/styles/DeleteItemModal.css
@@ -6,15 +6,24 @@
 .delete-form{
     display:flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content:center;
     vertical-align: middle;
     height: 38px;
 }
 
 .delete-form label{
-    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    align-self: center;
+    margin:0;
 }
 
-.delete-form-wrapper h3{
+.input-delete-form{
+    width: 50px;
+    margin: 0 5px 0 5px;
+
+}
+
+.delete-form-wrapper h5{
     text-align: center;
 }
